made dark mode default and other fixes

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -38,7 +38,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: green;
+  color: #59b256;
+  font-weight: 600;
 }
 
 .c-info-item {
